--- a/index.html
+++ b/index.html
@@ -15,7 +15,30 @@
 </head>
 
 <body>
-    <h1>hello</h1>
+    <div class="app">
+        <div class="header">
+            <nav class="header__navbar">
+                <ul class="header__navbar-list">
+                    <li class="header__navbar-item"><a href="">Vào cửa hàng trên ứng dụng BlackDr</a></li>
+                    <li class="header__navbar-item"><a href="">Kết nối</a></li>
+                </ul>
+                <ul class="header__navbar-list">
+                    <li class="header__navbar-item"><a href="" class="header__navbar-link">Thông báo</a></li>
+                    <li class="header__navbar-item"><a href="" class="header__navbar-link">Trợ giúp</a></li>
+                    <li class="header__navbar-item"><a href="">Đăng kí</a></li>
+                    <li class="header__navbar-item"><a href="">Đăng nhập</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="container">
+
+        </div>
+
+        <footer class="footer">
+
+        </footer>
+    </div>
 </body>
 
 </html>
