--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@
 <body>
     <div class="app">
         <div class="header">
-            <nav class="header__navbar">
-                <ul class="header__navbar-list">
-                    <li class="header__navbar-item"><a href="">Vào cửa hàng trên ứng dụng BlackDr</a></li>
-                    <li class="header__navbar-item"><a href="">Kết nối</a></li>
-                </ul>
-                <ul class="header__navbar-list">
-                    <li class="header__navbar-item"><a href="" class="header__navbar-link">Thông báo</a></li>
-                    <li class="header__navbar-item"><a href="" class="header__navbar-link">Trợ giúp</a></li>
-                    <li class="header__navbar-item"><a href="">Đăng kí</a></li>
-                    <li class="header__navbar-item"><a href="">Đăng nhập</a></li>
-                </ul>
-            </nav>
+            <div class="grid">
+                <nav class="header__navbar">
+                    <ul class="header__navbar-list">
+                        <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng BlackDr</li>
+                        <li class="header__navbar-item">Kết nối</li>
+                    </ul>
+                    <ul class="header__navbar-list">
+                        <li class="header__navbar-item">
+                            <a href="" class="header__navbar-item-link">Thông báo</a>
+                        </li>
+                        <li class="header__navbar-item header__navbar-item--separate">
+                            <a href="" class="header__navbar-item-link">Trợ giúp</a>
+                        </li>
+                        <li class="header__navbar-item header__navbar-item--strong">Đăng kí</li>
+                        <li class="header__navbar-item header__navbar-item--strong">Đăng nhập</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
 
         <div class="container">
