header QR code css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
             <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng BlackDr</li>
+                        <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
+                            Vào cửa hàng trên ứng dụng BlackDr
+                            <div class="header__qr">
+                                <img src="./assets/image/QR.png" alt="QR code" class="header__qr-img">
+                                <div class="header__qr-apps">
+                                    <a href="" class="header__qr-link"><img src="./assets/image/CHplay.png" alt="CH Play" class="header__dowloader-img"></a>
+                                    <a href="" class="header__qr-link"><img src="./assets/image/Appstore.png" alt="Appstore" class="header__dowloader-img"></a>
+                                </div>
+                            </div>
+                        </li>
                         <li class="header__navbar-item">
                             <span class="header__navbar-title--no-pointer">Kết nối</span>
                             <a href="" class="header__navbar-icoin-link">
