header notify css 1

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         </li>
                         <li class="header__navbar-item">
                             <span class="header__navbar-title--no-pointer">Kết nối</span>
-                            <a href="" class="header__navbar-icoin-link">
+                            <a href="https://www.facebook.com/neverstop.346/" target="_blank" class="header__navbar-icoin-link">
                                 <i class="header__navbar-icon fab fa-facebook"></i>
                             </a>
-                            <a href="" class="header__navbar-icoin-link">
+                            <a href="https://www.instagram.com/theend.com.vn/" target="_blank" class="header__navbar-icoin-link">
                                 <i class="header__navbar-icon fab fa-instagram"></i>
                             </a>
                         </li>
@@ -46,6 +46,52 @@
                             <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fas fa-bell"></i> Thông báo
                             </a>
+                            <div class="header__notify">
+                                <header class="header__notify-header">
+                                    <h3>Thông báo mới nhận</h3>
+                                </header>
+                                <ul class="header__notify-list">
+                                    <li class="header__notify-item header__notify-item--viewed">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm XXX</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm XXX</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item header__notify-item--viewed">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm XXX</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="header__notify-item">
+                                        <a href="" class="header__notify-link">
+                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__notify-img">
+                                            <div class="header__notify-info">
+                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm XXX</span>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <footer class="header__notify-footer">
+                                    <a href="" class="header__notify-footer-btn">Xem tất cả</a>
+                                </footer>
+                            </div>
                         </li>
                         <li class="header__navbar-item header__navbar-item--separate">
                             <a href="" class="header__navbar-item-link">
