--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </li>
                     </ul>
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item">
+                        <li class="header__navbar-item header__navbar-item--has-notify">
                             <a href="" class="header__navbar-item-link">
                                 <i class="header__navbar-icon fas fa-bell"></i> Thông báo
                             </a>
@@ -80,10 +80,10 @@
                                     </li>
                                     <li class="header__notify-item">
                                         <a href="" class="header__notify-link">
-                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__notify-img">
+                                            <img src="./assets/image/Project/ao.jpg" alt="" class="header__notify-img">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng</span>
-                                                <span class="header__notify-description">Mô tả sản phẩm XXX</span>
+                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng của tập đoàn phân trừ sâu</span>
+                                                <span class="header__notify-description">Mô tả sản phẩm XXX tập đoàn lớn nhất nhì Việt Nam Thái Bình Dương</span>
                                             </div>
                                         </a>
                                     </li>
