--- a/index.html
+++ b/index.html
@@ -156,11 +156,112 @@
                     <div class="header__cart">
                         <div class="header__cart-wrap">
                             <i class="header__cart-icon fas fa-shopping-cart"></i>
-                            <div class="header__cart-list header__cart-list--no-cart">
+                            <span class="header__cart-notice">
+                                3
+                            </span>
+                            <!-- No cart : header__cart-list--no-cart -->
+                            <div class="header__cart-list">
                                 <img src="./assets/image/no-cart.png" alt="" class="header__cart-no-cart-img">
                                 <span class="header__cart-no-cart-text">
                                     Mua ít ủng hộ đi
                                 </span>
+                                <div class="header__cart-list-header">
+                                    <h3>Sản phẩm đã thêm</h3>
+                                </div>
+                                <div class="header__cart-content">
+                                    <ul class="header__cart-list-item">
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/ao.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè không cổ giá chỉ 2 triệu đồng
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/ao.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    <a href="#" class="btn btn--primary header__cart-view-cart">
+                                        Xem giỏ hàng
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
