--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <li class="header__navbar-item header__navbar-item--strong">Đăng nhập</li> -->
                         <li class="header__navbar-item header__navbar-item--user">
                             <img src="./assets/image/avt.jpg" alt="avt" class="header__navbar-item--user-img">
-                            <span class="header__navbar-item--user-name">Nguyễn Đình Quyền</span>
+                            <span class="header__navbar-item--user-name">Đình Quyền</span>
                             <ul class="header__navbar-user-menu">
                                 <li class="header__navbar-user-menu-item">
                                     <a href="">Tài khoản của tôi</a>
@@ -290,8 +290,32 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="app__container">
+            <div class="grid">
+                <div class="grid__row">
+                    <div class="grid__column-2">
+                        <nav class="category">
+                            <h3 class="category-heading">
+                                <i class="category-heading__icon fas fa-list"></i> Danh mục
+                            </h3>
+                            <ul class="category-list">
+                                <li class="category-item category-item__active">
+                                    <a href="#" class="category-item__link">Mô hình anime</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình avenger</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình robot</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="grid__column-10">
 
+                    </div>
+                </div>
+            </div>
         </div>
 
         <footer class="footer">
