finish app container

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                         <a href="" class="header__notify-link">
                                             <img src="./assets/image/Project/ao.jpg" alt="" class="header__notify-img">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng của tập đoàn phân trừ sâu</span>
+                                                <span class="header__notify-name">Mỹ phẩm XXX chính hãng của tập đoàn phân trừ sâu nguyên chất</span>
                                                 <span class="header__notify-description">Mô tả sản phẩm XXX tập đoàn lớn nhất nhì Việt Nam Thái Bình Dương</span>
                                             </div>
                                         </a>
@@ -278,6 +278,180 @@
                                                 </div>
                                             </div>
                                         </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/ao.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè không cổ giá chỉ 2 triệu đồng
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/ao.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/ao.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/mypham1.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè không cổ giá chỉ 2 triệu đồng
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="header__cart-item">
+                                            <img src="./assets/image/Project/ao.jpg" alt="" class="header__cart-item-img">
+                                            <div class="header__cart-item-info">
+                                                <div class="header__cart-item-up">
+                                                    <div class="header__cart-item-name">
+                                                        Bộ áo mặc mùa hè
+                                                    </div>
+                                                    <div class="header__cart-item-oder">
+                                                        <div class="header__cart-item-price">
+                                                            2.400.500đ
+                                                        </div>
+                                                        <div class="header__cart-item-multiply">
+                                                            x
+                                                        </div>
+                                                        <div class="header__cart-item-amount">
+                                                            2
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="header__cart-item-down">
+                                                    <div class="header__cart-item-classify">
+                                                        Phân loại hàng : Bạc
+                                                    </div>
+                                                    <div class="header__cart-item-remove">
+                                                        Xóa
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
                                     </ul>
                                     <a href="#" class="btn btn--primary header__cart-view-cart">
                                         Xem giỏ hàng
@@ -307,6 +481,24 @@
                                 </li>
                                 <li class="category-item">
                                     <a href="#" class="category-item__link">Mô hình robot</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình hentai</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình hentai</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình hentai</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình hentai</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình hentai</a>
+                                </li>
+                                <li class="category-item">
+                                    <a href="#" class="category-item__link">Mô hình hentai</a>
                                 </li>
                             </ul>
                         </nav>
@@ -716,6 +908,40 @@
                                 </div>
                             </div>
                         </div>
+
+                        <ul class="pagination home-product__pagination">
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">
+                                    <i class="pagination-item__icon fas fa-angle-left"></i>
+                                </a>
+                            </li>
+                            <li class="pagination-item pagination-item--active">
+                                <a href="" class="pagination-item__link">1</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">2</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">3</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">4</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">5</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">...</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">15</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a href="" class="pagination-item__link">
+                                    <i class="pagination-item__icon fas fa-angle-right"></i>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
